<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_dialog">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="30dp"
            android:text="@string/please_allow_access"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="34dp"
            android:text="@string/please_allow_access_making_and_managing_calls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/ok"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/no"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>