<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_permission_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_permission_please"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:text="@string/permission_please"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_permission_call"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_please"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_please"
            app:srcCompat="@drawable/intro_permission_icon_camera"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_permission_call_title"
            style="@style/PermissionTitle"
            android:layout_marginStart="16dp"
            android:text="앨범 / 카메라"
            app:layout_constraintStart_toEndOf="@+id/iv_permission_call"
            app:layout_constraintTop_toTopOf="@+id/iv_permission_call" />

        <TextView
            android:id="@+id/tv_permission_call_description"
            style="@style/PermissionDescription"
            android:layout_marginTop="8dp"
            android:text="@string/permission_call_description"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_call_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_call_title" />


        <ImageView
            android:id="@+id/iv_address_book_call"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_please"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_call_description"
            app:srcCompat="@drawable/intro_permission_icon_location"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_permission_address_book_title"
            style="@style/PermissionTitle"
            android:layout_marginStart="16dp"
            android:text="위치"
            app:layout_constraintStart_toEndOf="@+id/iv_address_book_call"
            app:layout_constraintTop_toTopOf="@+id/iv_address_book_call" />

        <TextView
            android:id="@+id/tv_permission_address_book_description"
            style="@style/PermissionDescription"
            android:layout_marginTop="8dp"
            android:text="@string/permission_address_book_description"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_address_book_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_address_book_title" />


        <ImageView
            android:id="@+id/iv_storage_call"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_please"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_address_book_description"
            app:srcCompat="@drawable/intro_permission_icon_storage"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_permission_storage_title"
            style="@style/PermissionTitle"
            android:layout_marginStart="16dp"
            android:text="@string/storage"
            app:layout_constraintStart_toEndOf="@+id/iv_storage_call"
            app:layout_constraintTop_toTopOf="@+id/iv_storage_call" />

        <TextView
            android:id="@+id/tv_permission_storage_description"
            style="@style/PermissionDescription"
            android:layout_marginTop="8dp"
            android:text="@string/permission_storage_description"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_storage_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_storage_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        style="@style/BlueButton"
        android:layout_marginTop="16dp"
        android:text="@string/to_continue" />


</LinearLayout>