<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.iium.iium_medioz.view.term.SecondDialog" />

    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gyeonggititle_bold_title"
                        android:text="[필수] "
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_term_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gyeonggititle_bold_title"
                        android:paddingStart="5dp"
                        android:text="고유식별정보 수집 및 이용 동의서"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView32"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        tools:ignore="RtlSymmetry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gyeonggititle_medium"
                        android:text="@string/term_first"
                        android:textColor="@color/gray2"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_first"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="45dp"
                            android:fontFamily="@font/gyeonggititle_bold_title"
                            android:text="1. 개인정보 수집 항목 및 수집·이용목적"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_first_detail_first"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="45dp"
                            android:fontFamily="@font/gyeonggititle_medium"
                            android:paddingStart="20dp"
                            android:text="(가) 회사가 제공하는 서비스 제공과 상담"
                            android:textColor="@color/gray2"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_first" />

                        <TextView
                            android:id="@+id/tv_second"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/gyeonggititle_bold_title"
                            android:text="2. 개인정보 이용목적"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_first_detail_first" />

                        <TextView
                            android:id="@+id/tv_second_detail"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="45dp"
                            android:fontFamily="@font/gyeonggititle_medium"
                            android:paddingStart="20dp"
                            android:text="(가) 일반회원(필수) : 주민등록번호"
                            android:textColor="@color/gray2"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_second" />

                        <TextView
                            android:id="@+id/tv_third"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/gyeonggititle_bold_title"
                            android:text="3. 보유 및 기간"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_second_detail" />

                        <TextView
                            android:id="@+id/tv_third_detail"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="45dp"
                            android:fontFamily="@font/gyeonggititle_medium"
                            android:paddingStart="20dp"
                            android:text="@string/term_detail_first"
                            android:textColor="@color/gray2"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_third" />


                        <TextView
                            android:id="@+id/tv_four"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/gyeonggititle_bold_title"
                            android:text="4. 개인정보 보유 및 이용기간"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_third_detail" />

                        <TextView
                            android:id="@+id/tv_four_detail"
                            tools:ignore="RtlSymmetry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="45dp"
                            android:fontFamily="@font/gyeonggititle_medium"
                            android:paddingStart="20dp"
                            android:text="@string/term_detail_second"
                            android:textColor="@color/gray2"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_four" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ok_btn"
                    style="@style/CommonButtonStyle"
                    android:text="@string/ok"
                    android:onClick="onConfirmClick"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>